k8s/django-app/app.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    flux.weave.works/automated: "true"
  name: webapp
  namespace: django-multi-tier
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: thirupathip/django-test
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
          ports:
          - containerPort: 8000
            name: http
          volumeMounts:
            - name: secrets
              mountPath: "/etc/secrets"
          resources:
            limits:
              cpu: 200m
              memory: 300Mi
            requests:
              cpu: 200m
              memory: 300Mi
      # volumes:
      #   - name: secrets
      #     secret:
      #       secretName: webapp
      #       items:
      #       - key: val2
      #         path: secret_file
      #         mode: 511
